# try-benches-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  prek.toml
.github/: dependabot.yml
.github/workflows/: audit-check.yml  cargo-vet.yml  ci.yml  miri.yml  spelling.yml
crates/gcd/: Cargo.toml  README.md
crates/gcd/benches/: benchmark.rs  benchmark_criterion.rs  benchmark_divan.rs
crates/gcd/benches/common/: mod.rs
crates/gcd/src/: lib.rs
crates/substring/: Cargo.toml
crates/substring/benches/: benchmark.rs  benchmark_criterion.rs  benchmark_divan.rs
crates/substring/src/: lib.rs
crates/sum-float/: Cargo.toml
crates/sum-float/benches/: benchmark_criterion.rs  benchmark_divan.rs
crates/sum-float/benches/common/: mod.rs
crates/sum-float/src/: lib.rs
