# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [ "crates/gcd" ]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/koyeung/try-rs-benches/"

[workspace.dependencies]
divan = "0.1.14"
num = { version = "0.4.2", default-features = false }
proptest = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#release
codegen-units = 1
lto = true
panic = "abort"
strip = "none"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.dev]
debug = 0
