# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = ["crates/gcd", "crates/substring", "crates/sum-float"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/koyeung/try-rs-benches/"
rust-version = "1.88"

[workspace.dependencies]
criterion = "0.8.1"
divan = "0.1.14"
num = { version = "0.4.2", default-features = false }
proptest = "1.4.0"
rand = "0.9.2"
rand_chacha = "0.10.0"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#release
codegen-units = 1
lto = true
panic = "abort"
strip = "none"

[profile.dev]
debug = 0
