[package]
name = "gcd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num.workspace = true

[dev-dependencies]
divan.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "benchmark"
harness = false
