[package]
name = "gcd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "benchmark_divan"
harness = false

[[bench]]
name = "benchmark_criterion"
harness = false
